<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.bdd.serenity</groupId>
    <artifactId>BDDSerenity</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Sample Serenity Cucumber project</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <serenity.version>1.4.1-rc.2</serenity.version> <!-- https://bintray.com/serenity/maven/serenity-core/ -->
        <serenity.maven.version>1.4.1-rc.2</serenity.maven.version>
        <serenity.cucumber.version>1.1.35</serenity.cucumber.version> <!-- https://bintray.com/serenity/maven/serenity-cucumber/ -->
        <junit.threadCount>1</junit.threadCount>
        <junit.parallel></junit.parallel>

    </properties>

    <!-- Define the Bintray repos for convenience -->
    <repositories>
        <repository>
            <id>serenity</id>
            <name>bintray</name>
            <url>http://dl.bintray.com/serenity/maven</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>serenity</id>
            <name>bintray-plugins</name>
            <url>http://dl.bintray.com/serenity/maven</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.4.0</version>
        </dependency>

        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber</artifactId>
            <version>${serenity.cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.8.0-alpha2</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>2.5.0-alpha-1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.8.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-jira-requirements-provider</artifactId>
            <version>1.1.2-rc.1</version>
        </dependency>

        <!-- <dependency> <groupId>net.serenity-bdd</groupId>
        <artifactId>serenity-jira-plugin</artifactId> <version>1.1.2-rc.1</version>
        </dependency> -->

        <!-- Spring dependency for Rest Template added by
                   <dependency>
               <groupId>org.apache.poi</groupId>
               <artifactId>poi-ooxml-schemas</artifactId>
               <version>3.12</version>
               <exclusions>
                   <exclusion>
                       <artifactId>xml-apis</artifactId>
                       <groupId>xml-apis</groupId>
                   </exclusion>
               </exclusions>
           </dependency>
         <dependency>
               <groupId>commons-configuration</groupId>
               <artifactId>commons-configuration</artifactId>
               <version>1.10</version>
           </dependency>
           <dependency>
               <groupId>commons-beanutils</groupId>
               <artifactId>commons-beanutils</artifactId>
               <version>1.9.2</version>
           </dependency>
           <dependency>
               <groupId>org.apache.poi</groupId>
               <artifactId>poi-ooxml</artifactId>
               <version>3.9</version>
           </dependency>
           <dependency>
               <groupId>org.apache.poi</groupId>
               <artifactId>ooxml-schemas</artifactId>
               <version>1.0</version>
           </dependency> -->

    </dependencies>
    <build>
        <plugins>

            <!-- <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>1.4</version>
            <executions>
            <execution>
            <id>enforce</id>
            <configuration>
            <rules>
            <requireUpperBoundDeps />
            </rules>
            </configuration>
            <goals>
            <goal>enforce</goal>
            </goals>
            </execution>
            </executions>
            </plugin> -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <skip>true</skip>
                    <threadCount>${junit.threadCount}</threadCount>
                    <parallel>${junit.parallel}</parallel>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <includes>
                        <include>**/junit/cucumber/**</include>

                    </includes>
                    <reuseForks>true</reuseForks>
                    <!--<forkCount>2</forkCount> -->
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.maven.version}</version>
                <configuration>
                    <source>1.8</source>
                </configuration>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>

                    <!-- <dependency>
                    <groupId>net.serenity-bdd</groupId>
                    <artifactId>serenity-core</artifactId>
                    <version>${serenity.version}</version>
                    <dependencies>  -->

                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-jira-requirements-provider</artifactId>
                        <version>1.1.2-rc.1</version>
                    </dependency>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-jira-plugin</artifactId>
                        <version>1.1.2-rc.1</version>
                    </dependency>


                    <!-- <dependency>
                    <groupId>net.masterthought</groupId>
                    <artifactId>cucumber-reporting</artifactId>
                    <version>2.5.0</version>
                    </dependency> -->

                </dependencies>

            </plugin>
        </plugins>
    </build>
    <profiles>

        <profile>
            <id>firefox</id>
            <properties>
                <webdriver.driver>firefox</webdriver.driver>
            </properties>
        </profile>
        <profile>
            <id>chrome</id>
            <properties>
                <webdriver.driver>chrome</webdriver.driver>
                <webdriver.chrome.driver>chromedriver</webdriver.chrome.driver>
            </properties>
        </profile>

        <profile>
            <id>parallel</id>
            <properties>
                <junit.threadCount>2</junit.threadCount>
                <junit.parallel>classes</junit.parallel>
            </properties>
        </profile>
    </profiles>
</project>